# datastructure

./: CMakeLists.txt
src/: linkedlistinterface.hpp  singlylinkedlist.cpp  singlylinkedlist.hpp  stackbyarray.cpp  stackbyarray.hpp  stackbysinglylinkedlist.cpp  stackbysinglylinkedlist.hpp  stackinterface.hpp
test/: CMakeLists.txt  debugsinglylinkedlist.cpp  singlylinkedlist_add_to_end.cpp  singlylinkedlist_add_to_front.cpp  singlylinkedlist_erase_back.cpp  singlylinkedlist_erase_front.cpp  stackbyarray_double_capacity.cpp  stackbyarray_pop.cpp  stackbyarray_push.cpp  stackbysinglylinkedlist_pop.cpp  stackbysinglylinkedlist_push.cpp
